--- a/test/fixtures/restaurants.yml
+++ b/test/fixtures/restaurants.yml
@@ -3,11 +3,11 @@
 one:
   name: MyString
   address: MyString
-  phonenumber: 1
+  phone_number: 1
   category: MyString
 
 two:
   name: MyString
   address: MyString
-  phonenumber: 1
+  phone_number: 1
   category: MyString
